[gd_scene load_steps=18 format=3 uid="uid://3wslc2244aoc"]

[ext_resource type="Script" path="res://Scripts/Scenes/Jogos/jogo6_controller.gd" id="1_ns8h0"]
[ext_resource type="Resource" uid="uid://dvnu52u5tloq0" path="res://Perguntas/Categorias/jogo6.tres" id="2_ayfs4"]
[ext_resource type="FontFile" uid="uid://dyoxr568nj7rb" path="res://Themes/Fontes/OpenSans-SemiBold.ttf" id="3_822rv"]
[ext_resource type="Theme" uid="uid://cothvl5gfbaww" path="res://Themes/Botões/tema.tres" id="3_quh60"]
[ext_resource type="Texture2D" uid="uid://duvtrlavd8o2i" path="res://Assets/Common/UI/seta icon.svg" id="5_5bef1"]
[ext_resource type="Theme" uid="uid://divqfx1mbhnj3" path="res://Themes/Botões/tema jogo 1.tres" id="5_uriv3"]
[ext_resource type="AudioStream" uid="uid://ceoxbyqw3awuq" path="res://Assets/Instruções/Jogo 6.wav" id="6_nql0c"]
[ext_resource type="StyleBox" uid="uid://bbsrdsjryc1x1" path="res://Themes/Botões/botao 2.tres" id="6_xmq24"]
[ext_resource type="AudioStream" uid="uid://lgns6wsensd7" path="res://Assets/Common/Audio/audio wrong.wav" id="7_ia5ql"]
[ext_resource type="StyleBox" uid="uid://3chfguel1fv8" path="res://Themes/Botões/botao azul menu parabens.tres" id="7_xnvcn"]
[ext_resource type="AudioStream" uid="uid://f6o8n0xf263n" path="res://Assets/Common/Audio/audio win.wav" id="8_6pgow"]
[ext_resource type="StyleBox" uid="uid://n8jsuk1mc25l" path="res://Themes/Botões/botao 2 menu parabens.tres" id="9_5f787"]
[ext_resource type="Shader" path="res://Themes/blur.gdshader" id="10_7pn8b"]
[ext_resource type="AudioStream" uid="uid://yog4a8cikohl" path="res://Assets/Common/Audio/Parabens.wav" id="10_o4jwf"]
[ext_resource type="Texture2D" uid="uid://bx1fj26befch1" path="res://Assets/Common/UI/3249401.png" id="13_7a1xg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jfeo6"]
shader = ExtResource("10_7pn8b")
shader_parameter/lod = 1.5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vjity"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_ns8h0")
game = ExtResource("2_ayfs4")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="perguntas" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.168
anchor_top = 0.186
anchor_right = 0.835
anchor_bottom = 0.455
offset_left = 0.0399933
offset_top = -0.0800018
offset_right = -0.200012
offset_bottom = -0.400024
grow_horizontal = 2

[node name="texto das perguntas" type="Label" parent="Control/perguntas"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.141176, 0.141176, 0.141176, 1)
theme_override_fonts/font = ExtResource("3_822rv")
theme_override_font_sizes/font_size = 80
text = "Pergunta"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="respostas" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -175.0
offset_top = -270.0
offset_right = 175.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_quh60")
theme_override_constants/separation = 50

[node name="Button" type="Button" parent="Control/respostas"]
custom_minimum_size = Vector2(90, 20)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_uriv3")
button_mask = 5

[node name="Button2" type="Button" parent="Control/respostas"]
custom_minimum_size = Vector2(90, 20)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_uriv3")

[node name="Instrucoes" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_nql0c")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="errado" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ia5ql")

[node name="certo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_6pgow")

[node name="Parabéns" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_o4jwf")

[node name="Palavra" type="AudioStreamPlayer" parent="."]

[node name="ColorRect2" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_jfeo6")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.231373, 0.231373, 0.231373, 0.639216)

[node name="ColorRect" type="ColorRect" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.219608, 0.207843, 0.184314, 0.690196)

[node name="Skip" type="Button" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -33.0
offset_top = -157.0
offset_right = 33.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 35
icon = ExtResource("13_7a1xg")
flat = true
icon_alignment = 1
expand_icon = true

[node name="voltar" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_top = 24.0
offset_right = -127.0
offset_bottom = 102.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_vjity")
icon = ExtResource("5_5bef1")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.529412, 0.894118, 0.764706, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -147.5
offset_top = -378.0
offset_right = 147.5
offset_bottom = -99.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 55

[node name="jogar" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_quh60")
theme_override_fonts/font = ExtResource("3_822rv")
theme_override_font_sizes/font_size = 38
theme_override_styles/pressed = ExtResource("7_xnvcn")
text = "Jogar de novo"

[node name="menu" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_quh60")
theme_override_fonts/font = ExtResource("3_822rv")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = ExtResource("6_xmq24")
theme_override_styles/hover = ExtResource("6_xmq24")
theme_override_styles/pressed = ExtResource("9_5f787")
theme_override_styles/disabled = ExtResource("6_xmq24")
text = "Menu"

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_right = 244.0
offset_bottom = 369.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.168627, 0.168627, 0.168627, 1)
theme_override_font_sizes/font_size = 60
text = "Parabéns!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="ColorRect2/Skip" to="." method="_on_skip_pressed"]
[connection signal="pressed" from="voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/menu" to="." method="_on_menu_pressed"]
